fix parallelism and add embed info

--- a/jumpcutter/templates/enqueue.html
+++ b/jumpcutter/templates/enqueue.html
@@ -59,7 +59,7 @@
             <tr>
                 <td>Course</td>
                 <td>
-                    <select class="form-select">
+                    <select name="course" class="form-select">
                         <option value="" selected>Please select</option>
                         {% for course in courses %}
                             <option value="{{ course }}">{{ course }}</option>
