--- a/jumpcutter/templates/home.html
+++ b/jumpcutter/templates/home.html
@@ -39,7 +39,8 @@
         <thead>
         <tr>
             <th scope="col">name</th>
-            <th scope="col">status</th>
+            <th scope="col">course</th>
+            <th scope="col">current step</th>
             <th scope="col">approved until</th>
             <th scope="col">action</th>
         </tr>
@@ -48,7 +49,8 @@
         {% for job in jobs %}
             <tr>
                 <td>{{ job["file"]["name"] }}</td>
-                <td>status lol</td>
+                <td>{{ job["course"] }}</td>
+                <td>{{ job["current_step"] }} </td>
                 <td>{{ job["work_until"] }}</td>
                 <td>
                     <form action="/set_until" method="POST">
